--- a/Manifests/ManagedPreferencesApplications/com.microsoft.Edge.plist
+++ b/Manifests/ManagedPreferencesApplications/com.microsoft.Edge.plist
@@ -15,7 +15,7 @@
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_last_modified</key>
-	<date>2025-11-19T18:35:23Z</date>
+	<date>2025-11-22T11:47:35Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -360,6 +360,9 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>InPrivateModeAvailability</string>
 					<string>IsolateOrigins</string>
 					<string>JavascriptEnabled</string>
+					<string>LocalNetworkAccessAllowedForUrls</string>
+					<string>LocalNetworkAccessBlockedForUrls</string>
+					<string>LocalNetworkAccessRestrictionsEnabled</string>
 					<string>MachineLevelUserCloudPolicyEnrollmentToken</string>
 					<string>ManagedFavorites</string>
 					<string>MaxConnectionsPerProxy</string>
@@ -7855,6 +7858,74 @@ If you disable this policy, the AutoLaunch Protocols component is disabled.</str
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>138</string>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>A policy to control whether users are prompted to allow sites to ask for Local Network Access.</string>
+			<key>pfm_description_reference</key>
+			<string>When this policy is set to Enabled, any time when a warning is supposed to be displayed in Chrome DevTools due to Local Network Access checks failing, the main request will be blocked instead.
+When this policy is set to Disabled or unset, Local Network Access requests will use the default handling of these requests.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-au/deployedge/microsoft-edge-browser-policies/localnetworkaccessrestrictionsenabled</string>
+			<key>pfm_name</key>
+			<string>LocalNetworkAccessRestrictionsEnabled</string>
+			<key>pfm_title</key>
+			<string>Local Network Access Restrictions Enabled</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>140</string>
+			<key>pfm_description</key>
+			<string>A policy to automatically grant specific sites Local Network Access.</string>
+			<key>pfm_description_reference</key>
+			<string>List of URL patterns. Requests initiated from websites served by matching origins are not subject to Local Network Access checks.
+If an origin is covered by both this policy and by LocalNetworkAccessBlockedForUrls, LocalNetworkAccessBlockedForUrls takes precedence.
+For origins not covered by the patterns specified here, the user's personal configuration will apply. </string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-au/deployedge/microsoft-edge-browser-policies/localnetworkaccessallowedforurls</string>
+			<key>pfm_name</key>
+			<string>LocalNetworkAccessAllowedForUrls</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_type</key>
+					<string>string</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Local Network Access Allowed For URLs</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>140</string>
+			<key>pfm_description</key>
+			<string>A policy to automatically deny specific sites Local Network Access.</string>
+			<key>pfm_description_reference</key>
+			<string>List of URL patterns. Requests initiated from websites served by matching origins are blocked from issuing Local Network Access requests.
+If an origin is covered by both this policy and by LocalNetworkAccessAllowedForUrls, this policy takes precedence.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-au/deployedge/microsoft-edge-browser-policies/localnetworkaccessblockedforurls</string>
+			<key>pfm_name</key>
+			<string>LocalNetworkAccessBlockedForUrls</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_type</key>
+					<string>string</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Local Network Access Blocked For URLs</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
 	</array>
 	<key>pfm_targets</key>
 	<array>
@@ -7866,6 +7937,6 @@ If you disable this policy, the AutoLaunch Protocols component is disabled.</str
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>16</integer>
+	<integer>17</integer>
 </dict>
 </plist>
