--- a/Manifests/ManagedPreferencesApplications/com.twocanoes.xcreds.plist
+++ b/Manifests/ManagedPreferencesApplications/com.twocanoes.xcreds.plist
@@ -5,7 +5,7 @@
 	<key>pfm_app_url</key>
 	<string>https://github.com/twocanoes/xcreds</string>
 	<key>pfm_description</key>
-	<string>XCreds 5.7 (9047) OAuth Settings</string>
+	<string>XCreds 5.8 (9052) OAuth Settings</string>
 	<key>pfm_documentation_url</key>
 	<string>https://twocanoes.com/knowledge-base/xcreds-admin-guide/#preferences</string>
 	<key>pfm_domain</key>
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-11-17T19:22:18Z</date>
+	<date>2025-12-05T20:00:13Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -924,6 +924,8 @@ Note that Google does not support the offline_access scope so instead use the pr
 		<dict>
 			<key>pfm_app_max</key>
 			<string>3.2.1</string>
+			<key>pfm_app_deprecated</key>
+			<string>4.0</string>
 			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
@@ -954,10 +956,10 @@ Note that Google does not support the offline_access scope so instead use the pr
 			<string>boolean</string>
 		</dict>
 		<dict>
-			<key>pfm_app_deprecated</key>
-			<string>3.2.1</string>
 			<key>pfm_app_max</key>
 			<string>3.2.1</string>
+			<key>pfm_app_deprecated</key>
+			<string>4.0</string>
 			<key>pfm_description</key>
 			<string>(Removed in v4.0) ROPG Client ID for use when checking password.</string>
 			<key>pfm_documentation_url</key>
@@ -970,10 +972,10 @@ Note that Google does not support the offline_access scope so instead use the pr
 			<string>string</string>
 		</dict>
 		<dict>
-			<key>pfm_app_deprecated</key>
-			<string>3.2.1</string>
 			<key>pfm_app_max</key>
 			<string>3.2.1</string>
+			<key>pfm_app_deprecated</key>
+			<string>4.0</string>
 			<key>pfm_description</key>
 			<string>(Removed in v4.0) ROPG Client Secret for use when checking password.</string>
 			<key>pfm_documentation_url</key>
@@ -1028,6 +1030,22 @@ Note that Google does not support the offline_access scope so instead use the pr
 			<string>shouldUseROPGForPasswordChangeChecking</string>
 			<key>pfm_title</key>
 			<string>Should Use ROPG For Password Change Checking</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>5.8</string>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>When verifying local password matches cloud password in the background, use Google LDAP. If set to false, the refresh token will be used to verify password change.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://twocanoes.com/knowledge-base/xcreds-admin-guide/#preferences</string>
+			<key>pfm_name</key>
+			<string>shouldUseLDAPForPasswordChangeChecking</string>
+			<key>pfm_title</key>
+			<string>Should Use LDAP For Password Change Checking</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
@@ -1406,9 +1424,9 @@ Note that Google does not support the offline_access scope so instead use the pr
 			<string>boolean</string>
 		</dict>
 		<dict>
-			<key>pfm_app_deprecated</key>
-			<string>5.4</string>
 			<key>pfm_app_max</key>
+			<string>5.3</string>
+			<key>pfm_app_deprecated</key>
 			<string>5.4</string>
 			<key>pfm_default</key>
 			<true/>
@@ -1450,9 +1468,9 @@ Note that Google does not support the offline_access scope so instead use the pr
 			<string>string</string>
 		</dict>
 		<dict>
-			<key>pfm_app_deprecated</key>
-			<string>5.4</string>
 			<key>pfm_app_max</key>
+			<string>5.3</string>
+			<key>pfm_app_deprecated</key>
 			<string>5.4</string>
 			<key>pfm_default</key>
 			<false/>
@@ -2125,6 +2143,6 @@ changing "passwordID" to the correct element ID. If the value you typed into the
 	<key>pfm_unique</key>
 	<false/>
 	<key>pfm_version</key>
-	<integer>16</integer>
+	<integer>15</integer>
 </dict>
 </plist>
