--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-12-04T14:30:00Z</date>
+	<date>2025-12-06T03:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -398,8 +398,8 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>integer</string>
 		</dict>
 		<dict>
-			<key>pfm_app_max</key>
-			<string>1.3</string>
+			<key>pfm_app_deprecated</key>
+			<string>1.4</string>
 			<key>pfm_description</key>
 			<string>When using JSM with Jamf Pro, set this to $JSSID in a Jamf Pro configuration profile and Setup Manager will be aware of its computer's id in Jamf Pro.</string>
 			<key>pfm_documentation_url</key>
@@ -411,7 +411,7 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>$JSSID</string>
 			</array>
 			<key>pfm_title</key>
-			<string>Jamf Pro ID (Setup Manager 1.3 and earlier)</string>
+			<string>Jamf Pro ID (Setup Manager 1.3.1 and earlier)</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
@@ -440,8 +440,8 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>string</string>
 		</dict>
 		<dict>
-			<key>pfm_app_max</key>
-			<string>1.3</string>
+			<key>pfm_app_deprecated</key>
+			<string>1.4</string>
 			<key>pfm_description</key>
 			<string>Set this to $EMAIL in the configuration profile. This communicates the user who logged in to customized enrollment to Setup Manager. This can be used together with the userEntry.showForUserIDs key to control which users see the user entry UI.</string>
 			<key>pfm_documentation_url</key>
@@ -454,7 +454,7 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>$USERNAME</string>
 			</array>
 			<key>pfm_title</key>
-			<string>Jamf Pro User ID (Setup Manager 1.3 and earlier)</string>
+			<string>Jamf Pro User ID (Setup Manager 1.3.1 and earlier)</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
