--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-11-23T03:30:00Z</date>
+	<date>2025-12-06T03:00:00Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -142,7 +142,7 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>Webhooks</string>
 				<string>Network Connectivity</string>
 				<string>Help</string>
-				<string>Jamf Pro only</string>
+				<string>Jamf MDM</string>
 				<string>Debugging</string>
 			</array>
 			<key>pfm_require</key>
@@ -161,15 +161,18 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>enrollmentActions</string>
 					<string>finishedScript</string>
 					<string>finishedTrigger</string>
+					<string>finishedMessage</string>
 				</array>
 				<key>General</key>
 				<array>
 					<string>title</string>
 					<string>icon</string>
 					<string>message</string>
+					<string>banner</string>
 					<string>background</string>
 					<string>runAt</string>
 					<string>accentColor</string>
+					<string>tileColor</string>
 					<string>finalCountdown</string>
 					<string>finalAction</string>
 					<string>totalDownloadBytes</string>
@@ -182,14 +185,17 @@ A profile can consist of payloads with different version numbers. For example, c
 				<array>
 					<string>help</string>
 				</array>
-				<key>Jamf Pro only</key>
+				<key>Jamf MDM</key>
 				<array>
 					<string>jssID</string>
+					<string>computerID</string>
 					<string>userID</string>
+					<string>enrollmentUserID</string>
 				</array>
 				<key>Network Connectivity</key>
 				<array>
 					<string>networkCheck</string>
+					<string>networkQualityCheck</string>
 				</array>
 				<key>User Entry</key>
 				<array>
@@ -219,7 +225,8 @@ A profile can consist of payloads with different version numbers. For example, c
 			<key>pfm_default</key>
 			<string>Welcome to Setup Manager</string>
 			<key>pfm_description</key>
-			<string>The main title over the window. Supports substitutions.</string>
+			<string>The main title over the window. Supports substitutions.
+(v1.4+) When the title is empty or unset, the default message 'Welcome to Setup Manager' will be shown, unless the banner is set, then no title will be shown instead. This allows for a custom branded title and icon in the banner image.</string>
 			<key>pfm_documentation_url</key>
 			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#title</string>
 			<key>pfm_name</key>
@@ -233,7 +240,8 @@ A profile can consist of payloads with different version numbers. For example, c
 			<key>pfm_default</key>
 			<string>name:AppIcon</string>
 			<key>pfm_description</key>
-			<string>The icon shown at the top center of the window. There are many options to define icons, as described in the documentation.</string>
+			<string>The icon shown at the top center of the window. There are many options to define icons, as described in the documentation.
+(v1.4+) When the icon is empty or unset, Setup Manager will show the Setup Manager app icon, unless the banner is set, then no icon will be shown instead. This allows for a custom branded icon and title in the banner image.</string>
 			<key>pfm_documentation_url</key>
 			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#icon</string>
 			<key>pfm_name</key>
@@ -258,14 +266,28 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>string</string>
 		</dict>
 		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
 			<key>pfm_description</key>
-			<string>When set, Setup Manager displays the image full screen as a background behind the main window. Supports the same sources as Icon.</string>
+			<string>A banner image or color that covers the top of the Setup Manager window. See the documentation for dimensions. Supports both images (using the same sources as Icon) and colors.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#banner</string>
+			<key>pfm_name</key>
+			<string>banner</string>
+			<key>pfm_title</key>
+			<string>Banner Image/Color</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>When set, Setup Manager displays the image full screen as a background behind the main window. Supports images (using the same sources as Icon) and also colors from v1.4 on.</string>
 			<key>pfm_documentation_url</key>
 			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#background</string>
 			<key>pfm_name</key>
 			<string>background</string>
 			<key>pfm_title</key>
-			<string>Background Image</string>
+			<string>Background Image/Color</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
@@ -304,6 +326,20 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>accentColor</string>
 			<key>pfm_title</key>
 			<string>Accent Color</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_description</key>
+			<string>Sets the action tile background color for all action tiles, unless the value is overridden by an individual action's tileColor key.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#tilecolor</string>
+			<key>pfm_name</key>
+			<string>tileColor</string>
+			<key>pfm_title</key>
+			<string>Default Tile Color</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
@@ -362,10 +398,12 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>integer</string>
 		</dict>
 		<dict>
+			<key>pfm_app_deprecated</key>
+			<string>1.4</string>
 			<key>pfm_description</key>
 			<string>When using JSM with Jamf Pro, set this to $JSSID in a Jamf Pro configuration profile and Setup Manager will be aware of its computer's id in Jamf Pro.</string>
 			<key>pfm_documentation_url</key>
-			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#jssid</string>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#computerid</string>
 			<key>pfm_name</key>
 			<string>jssID</string>
 			<key>pfm_range_list</key>
@@ -373,15 +411,41 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>$JSSID</string>
 			</array>
 			<key>pfm_title</key>
-			<string>Jamf Pro ID</string>
+			<string>Jamf Pro ID (Setup Manager 1.3.1 and earlier)</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
 		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_description</key>
+			<string>When using JSM with Jamf Pro, set this to $JSSID in a Jamf Pro configuration profile and Setup Manager will be aware of its computer's id in Jamf Pro. For similar effect with Jamf School, set this to %udid%.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#computerid</string>
+			<key>pfm_name</key>
+			<string>computerID</string>
+			<key>pfm_range_list</key>
+			<array>
+				<string>$JSSID</string>
+				<string>%udid%</string>
+			</array>
+			<key>pfm_range_list_titles</key>
+			<array>
+				<string>$JSSID (For Jamf Pro)</string>
+				<string>%udid% (For Jamf School)</string>
+			</array>
+			<key>pfm_title</key>
+			<string>Computer ID (Setup Manager 1.4 and later)</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_deprecated</key>
+			<string>1.4</string>
 			<key>pfm_description</key>
 			<string>Set this to $EMAIL in the configuration profile. This communicates the user who logged in to customized enrollment to Setup Manager. This can be used together with the userEntry.showForUserIDs key to control which users see the user entry UI.</string>
 			<key>pfm_documentation_url</key>
-			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#userid</string>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#enrollmentuserid</string>
 			<key>pfm_name</key>
 			<string>userID</string>
 			<key>pfm_range_list</key>
@@ -390,7 +454,26 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>$USERNAME</string>
 			</array>
 			<key>pfm_title</key>
-			<string>Jamf Pro User ID</string>
+			<string>Jamf Pro User ID (Setup Manager 1.3.1 and earlier)</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_description</key>
+			<string>Set this to $EMAIL in the configuration profile. This communicates the user who logged in to customized enrollment to Setup Manager. This can be used together with the userEntry.showForUserIDs key to control which users see the user entry UI.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#enrollmentuserid</string>
+			<key>pfm_name</key>
+			<string>enrollmentUserID</string>
+			<key>pfm_range_list</key>
+			<array>
+				<string>$EMAIL</string>
+				<string>$USERNAME</string>
+			</array>
+			<key>pfm_title</key>
+			<string>Jamf Pro User ID (Setup Manager 1.4 and later)</string>
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
@@ -457,6 +540,22 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>Action Output Logging</string>
 			<key>pfm_type</key>
 			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_default</key>
+			<true/>
+			<key>pfm_description</key>
+			<string>Set this key to false to suppress the network quality check.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#networkqualitycheck</string>
+			<key>pfm_name</key>
+			<string>networkQualityCheck</string>
+			<key>pfm_title</key>
+			<string>Network Quality Check</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
@@ -1739,6 +1838,18 @@ A profile can consist of payloads with different version numbers. For example, c
 							<string>string</string>
 						</dict>
 						<dict>
+							<key>pfm_app_min</key>
+							<string>1.4</string>
+							<key>pfm_description</key>
+							<string>The background color of the action's tile.</string>
+							<key>pfm_name</key>
+							<string>tileColor</string>
+							<key>pfm_title</key>
+							<string>Tile Color</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
 							<key>pfm_description</key>
 							<string>The absolute path to the command or script that should be run for this action.</string>
 							<key>pfm_name</key>
@@ -1915,6 +2026,20 @@ A profile can consist of payloads with different version numbers. For example, c
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
+			<string>1.4</string>
+			<key>pfm_description</key>
+			<string>Custom message when Setup Manager workflow is complete. Supports Markdown and substitutions.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/ConfigurationProfile.md#finishedMessage</string>
+			<key>pfm_name</key>
+			<string>finishedMessage</string>
+			<key>pfm_title</key>
+			<string>Finished Message</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
 			<string>1.2</string>
 			<key>pfm_name</key>
 			<string>webhooks</string>
@@ -2003,11 +2128,13 @@ A profile can consist of payloads with different version numbers. For example, c
 									<array>
 										<string>generic</string>
 										<string>teams</string>
+										<string>slack</string>
 									</array>
 									<key>pfm_range_list_titles</key>
 									<array>
 										<string>Generic</string>
 										<string>Microsoft Teams</string>
+										<string>Slack</string>
 									</array>
 									<key>pfm_required</key>
 									<true/>
@@ -2139,6 +2266,8 @@ A profile can consist of payloads with different version numbers. For example, c
 		<dict>
 			<key>pfm_description</key>
 			<string>Suppress launch tracking by enabling this setting.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/Docs/LaunchTracking.md</string>
 			<key>pfm_name</key>
 			<string>PLEASE_DO_NOT_TRACK</string>
 			<key>pfm_title</key>
@@ -2156,6 +2285,6 @@ A profile can consist of payloads with different version numbers. For example, c
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>5</integer>
+	<integer>6</integer>
 </dict>
 </plist>
