--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.auth-service-extension.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.auth-service-extension.plist
@@ -321,6 +321,20 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 		</dict>
 		<dict>
 			<key>pfm_description</key>
+			<string>Admins can use this value to customize the osquery timeout value and fine-tune device posture checks.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://help.okta.com/oie/en-us/content/topics/identity-engine/devices/managed-app-configs-macos.htm#OktaVeri9</string>
+			<key>pfm_name</key>
+			<string>OktaVerify.OSQueryCustomChecksTimeout</string>
+			<key>pfm_title</key>
+			<string>OS Query Custom Checks Timeouts</string>
+			<key>pfm_type</key>
+			<string>string</string>
+			<key>pfm_value_placeholder</key>
+			<string>2</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
 			<string>Defines the organizations that can run custom OSQuery checks on this device.</string>
 			<key>pfm_documentation_url</key>
 			<string>https://help.okta.com/oie/en-us/content/topics/identity-engine/devices/managed-app-configs-macos.htm#OktaVeri8</string>
