--- a/Manifests/ManagedPreferencesApplications/org.mozilla.firefox.plist
+++ b/Manifests/ManagedPreferencesApplications/org.mozilla.firefox.plist
@@ -193,6 +193,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>DontCheckDefaultBrowser</string>
 					<string>DownloadDirectory</string>
 					<string>FirefoxHome</string>
+					<string>GenerativeAI</string>
 					<string>Handlers</string>
 					<string>HardwareAcceleration</string>
 					<string>Homepage</string>
@@ -327,6 +328,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>DontCheckDefaultBrowser</string>
 					<string>DownloadDirectory</string>
 					<string>FirefoxHome</string>
+					<string>GenerativeAI</string>
 					<string>Handlers</string>
 					<string>HardwareAcceleration</string>
 					<string>Homepage</string>
@@ -1778,6 +1780,87 @@ The configuration for each extension is another dictionary that can contain the 
 			</array>
 			<key>pfm_title</key>
 			<string>FirefoxHome</string>
+			<key>pfm_type</key>
+			<string>dictionary</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>144</string>
+			<key>pfm_description</key>
+			<string>Configure generative AI features</string>
+			<key>pfm_documentation_url</key>
+			<string>https://mozilla.github.io/policy-templates/#generativeai</string>
+			<key>pfm_name</key>
+			<string>GenerativeAI</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_default</key>
+					<false/>
+					<key>pfm_description</key>
+					<string>Controls whether generative AI features are enabled by default</string>
+					<key>pfm_name</key>
+					<string>Enabled</string>
+					<key>pfm_title</key>
+					<string>Enabled</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
+				<dict>
+					<key>pfm_default</key>
+					<false/>
+					<key>pfm_description</key>
+					<string>Controls access to AI chatbots in the sidebar</string>
+					<key>pfm_name</key>
+					<string>Chatbot</string>
+					<key>pfm_title</key>
+					<string>ChatBot</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
+				<dict>
+					<key>pfm_app_min</key>
+					<string>144</string>
+					<key>pfm_default</key>
+					<false/>
+					<key>pfm_description</key>
+					<string>Controls whether AI is used to generate link previews</string>
+					<key>pfm_name</key>
+					<string>LinkPreviews</string>
+					<key>pfm_title</key>
+					<string>Link Previews</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
+				<dict>
+					<key>pfm_app_min</key>
+					<string>144</string>
+					<key>pfm_default</key>
+					<false/>
+					<key>pfm_description</key>
+					<string>Controls whether AI is used to suggest names and tabs for tab groups</string>
+					<key>pfm_name</key>
+					<string>TabGroups</string>
+					<key>pfm_title</key>
+					<string>Tab Groups</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
+				<dict>
+					<key>pfm_default</key>
+					<false/>
+					<key>pfm_description</key>
+					<string>Prevents the user from changing generative AI preferences</string>
+					<key>pfm_name</key>
+					<string>Locked</string>
+					<key>pfm_title</key>
+					<string>Locked</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Generative AI</string>
 			<key>pfm_type</key>
 			<string>dictionary</string>
 		</dict>
