--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
@@ -65,7 +65,7 @@
 	ChiYvHgSithnzR++s9bEkCFDhgwZMuR8+TcgDLDRAr0H4wAAAABJRU5ErkJggg==
 	</data>
 	<key>pfm_last_modified</key>
-	<date>2025-07-15T15:19:08Z</date>
+	<date>2025-12-18T22:30:02Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -279,6 +279,20 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 		</dict>
 		<dict>
 			<key>pfm_default</key>
+			<string>2</string>
+			<key>pfm_description</key>
+			<string>Admins can use this value to customize the osquery timeout value and fine-tune device posture checks</string>
+			<key>pfm_documentation_url</key>
+			<string>https://help.okta.com/oie/en-us/content/topics/identity-engine/devices/managed-app-configs-macos.htm#OktaVeri9</string>
+			<key>pfm_name</key>
+			<string>OktaVerify.OSQueryCustomChecksTimeout</string>
+			<key>pfm_title</key>
+			<string>OS Query Custom Checks Timeouts</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
 			<false/>
 			<key>pfm_description</key>
 			<string>Specifies whether custom OSQuery checks can be run on this device.</string>
@@ -315,6 +329,6 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>2</integer>
+	<integer>3</integer>
 </dict>
 </plist>
