--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -176,6 +176,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>CookiesAllowedForUrls</string>
 					<string>CookiesBlockedForUrls</string>
 					<string>CookiesSessionOnlyForUrls</string>
+					<string>DefaultClipboardSetting</string>
 					<string>DefaultCookiesSetting</string>
 					<string>DefaultGeolocationSetting</string>
 					<string>DefaultImagesSetting</string>
@@ -605,6 +606,35 @@ This policy is only effective when the machine is enrolled with CloudManagementE
 			<string>Report Safe Browsing</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>103</string>
+			<key>pfm_description</key>
+			<string>This policy only affects clipboard operations controlled by the clipboard site permission, and does not affect sanitized clipboard writes or trusted copy and paste operations.</string>
+			<key>pfm_description_reference</key>
+			<string>Setting the policy to 2 blocks sites from using the clipboard site permission. Setting the policy to 3 or leaving it unset lets the user change the setting and decide if the clipboard APIs are available when a site wants to use one.
+
+This policy can be overridden for specific URL patterns using the ClipboardAllowedForUrls and ClipboardBlockedForUrls policies.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>hhttps://chromeenterprise.google/policies/#DefaultClipboardSetting</string>
+			<key>pfm_name</key>
+			<string>DefaultClipboardSetting</string>
+			<key>pfm_range_list</key>
+			<array>
+				<integer>2</integer>
+				<integer>3</integer>
+			</array>
+			<key>pfm_range_list_titles</key>
+			<array>
+				<string>Do not allow any site to use the clipboard site permission</string>
+				<string>Allow sites to ask the user to grant the clipboard site permission</string>
+			</array>
+			<key>pfm_title</key>
+			<string>Default clipboard setting</string>
+			<key>pfm_type</key>
+			<string>integer</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
