--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -228,6 +228,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Extensions</key>
 				<array>
+					<string>ExtensionUnpublishedAvailability</string>
 					<string>BlockExternalExtensions</string>
 					<string>ExtensionAllowInsecureUpdates</string>
 					<string>ExtensionAllowedTypes</string>
@@ -2713,6 +2714,32 @@ For a full description of possible settings and structure of this policy please 
 			<string>Extension management settings</string>
 			<key>pfm_type</key>
 			<string>dictionary</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>115</string>
+			<key>pfm_description</key>
+			<string>If this policy is enabled, extensions that are unpublished on the Chrome Web Store will be disabled in Google Chrome</string>
+			<key>pfm_description_reference</key>
+			<string>If this policy is enabled, extensions that are unpublished on the Chrome Web Store will be disabled in Google Chrome. This policy only applies to extensions that are installed and updated from the Chrome Web Store. If the policy is set to AllowUnpublished (0) or not set, extensions that are unpublished on the Chrome Web Store are allowed. If the policy is set to DisableUnpublished (1), extensions that are unpublished on the Chrome Web Store are disabled.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#ExtensionUnpublishedAvailability</string>
+			<key>pfm_name</key>
+			<string>ExtensionUnpublishedAvailability</string>
+			<key>pfm_range_list</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+			</array>
+			<key>pfm_range_list_titles</key>
+			<array>
+				<string>Allow unpublished extensions</string>
+				<string>Disable unpublished extensions</string>
+			</array>
+			<key>pfm_title</key>
+			<string>Control availability of extensions unpublished on the Chrome Web Store.</string>
+			<key>pfm_type</key>
+			<string>integer</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
