--- a/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
+++ b/Manifests/ManagedPreferencesApplications/com.google.Chrome.plist
@@ -280,6 +280,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				</array>
 				<key>Misc.</key>
 				<array>
+					<string>StrictMimetypeCheckForWorkerScriptsEnabled</string>
 					<string>AbusiveExperienceInterventionEnforce</string>
 					<string>AccessibilityImageLabelsEnabled</string>
 					<string>AdsSettingForIntrusiveAdsSites</string>
@@ -3365,6 +3366,26 @@ For more information on Internet Explorer's SiteList policy: https://docs.micros
 			<string>string</string>
 			<key>pfm_value_placeholder</key>
 			<string>http://example.com/sitelist.xml</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>107</string>
+			<key>pfm_description</key>
+			<string>This policy enables strict MIME type checking for worker scripts.</string>
+			<key>pfm_description_reference</key>
+			<string>This policy controls Google Chrome cloud reporting which uploads information about the browser operation to Google Admin console.
+When enabled or unset, then worker scripts will use strict MIME type checking for JavaScript, which is the new default behaviour. Worker scripts with legacy MIME types will be rejected.
+
+When disabled, then worker scripts will use lax MIME type checking, so that worker scripts with legacy MIME types, e.g. text/ascii, will continue to be loaded and executed.
+			</string>
+			<key>pfm_documentation_url</key>
+			<string>https://chromeenterprise.google/policies/#StrictMimetypeCheckForWorkerScriptsEnabled</string>
+			<key>pfm_name</key>
+			<string>StrictMimetypeCheckForWorkerScriptsEnabled</string>
+			<key>pfm_title</key>
+			<string>Enable strict MIME type checking for worker scripts</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
